@@ -82,9 +82,7 @@ if (System.getProperty('idea.active') == 'true') {
         runConfigurations {
           defaults(JUnit) {
             vmParameters = '-ea -Djava.locale.providers=SPI,CLDR'
-            if (BuildParams.runtimeJavaVersion > JavaVersion.VERSION_17) {
-              vmParameters += ' -Djava.security.manager=allow'
-            }
+            vmParameters += ' -javaagent:' + project(':libs:agent-sm:agent').jar.archiveFile.get()
           }
         }
         copyright {
